--- a/nginx.forward.conf
+++ b/nginx.forward.conf
@@ -31,7 +31,7 @@ http {
         }
 
         location /api {
-            rewrite ^/api/(.*)$ /$1 break;
+            rewrite ^\/api\/(.*)$ /api/$1 break;
             proxy_http_version 1.1;
             proxy_pass         http://api-server;
             proxy_set_header Upgrade $http_upgrade;
