--- a/nginx.forward.conf
+++ b/nginx.forward.conf
@@ -18,7 +18,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name digitals.software www.digitals.software;
 
         location / {
             root /usr/share/nginx/html;
@@ -34,11 +34,9 @@ http {
             rewrite ^\/api\/(.*)$ /api/$1 break;
             proxy_http_version 1.1;
             proxy_pass         http://api-server;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_set_header Origin $http_origin;
-            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         add_header X-Content-Type-Options nosniff;
