--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,13 +35,23 @@ services:
     env_file: .env.client
     ports:
       - '80:80'
+      - '443:443'
     volumes:
       - ./nginx.forward.conf:/etc/nginx/nginx.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - reverse-proxy
       - server
     networks:
       - mern-app
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/etc/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email doankietdev@gmail.com -d digitals.software --agree-tos
 
 networks:
   mern-app:
