--- a/nginx.forward.conf
+++ b/nginx.forward.conf
@@ -17,8 +17,22 @@ http {
     }
 
     server {
-        listen 80;
-        server_name digitals.software www.digitals.software;
+        listen 80 default_server;
+        server_name _;
+
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        return 301 https://$host$request_uri
+    }
+
+    server {
+        listen 443 ssl http2
+
+        ssl_certificate /etc/letsenscrypt/live/digitals.software/fullchain.pem;
+        ssl_certificate_key /etc/letsenscrypt/live/digitals.software/privkey.pem;
+        server_name digitals.software
 
         location / {
             root /usr/share/nginx/html;
@@ -27,7 +41,7 @@ http {
             expires max;
             gzip_static on;
             gzip on;
-            gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+            gzip_types text/plain text/csss application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
         }
 
         location /api {
@@ -37,6 +51,14 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
         }
 
         add_header X-Content-Type-Options nosniff;
