--- a/nginx.forward.conf
+++ b/nginx.forward.conf
@@ -28,7 +28,7 @@ http {
     }
 
     server {
-        listen 443 ssl http2
+        listen 443 ssl http2;
 
         ssl_certificate /etc/letsenscrypt/live/digitals.software/fullchain.pem;
         ssl_certificate_key /etc/letsenscrypt/live/digitals.software/privkey.pem;
