--- a/nginx.forward.conf
+++ b/nginx.forward.conf
@@ -32,7 +32,7 @@ http {
 
         ssl_certificate /etc/letsenscrypt/live/digitals.software/fullchain.pem;
         ssl_certificate_key /etc/letsenscrypt/live/digitals.software/privkey.pem;
-        server_name digitals.software
+        server_name digitals.software;
 
         location / {
             root /usr/share/nginx/html;
