--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,9 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email doankietdev@gmail.com -d selegend.net --agree-tos
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email doankietdev@gmail.com -d digitals.software --agree-tos
+    depends_on:
+      - server
 
   client:
     image: doankietdev/digital-world-shop-web:1.0.0
