--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
 
     server {
         listen 80;
-        server_name selegend.net www.selegend.net;
+        server_name digitals.software www.digitals.software;
 
         location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -29,11 +29,11 @@ http {
 
     server {
         listen 443 ssl http2;
-        server_name selegend.net www.selegend.net;
+        server_name digitals.software www.digitals.software;
 
-        ssl_certificate /etc/nginx/ssl/live/selegend.net/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/live/selegend.net/privkey.pem;
-        server_name selegend.net;
+        ssl_certificate /etc/nginx/ssl/live/digitals.software/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/live/digitals.software/privkey.pem;
+        server_name digitals.software;
 
         location / {
             root /usr/share/nginx/html;
