--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
     command: certonly --webroot -w /var/www/certbot --force-renewal --email doankietdev@gmail.com -d digitals.software --agree-tos
     depends_on:
       - server
+      - client
 
   client:
     image: doankietdev/digital-world-shop-web:1.0.0
@@ -34,9 +35,9 @@ services:
     ports:
       - '80:80'
       - '443:443'
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./certbot/www/:/var/www/certbot/:ro
+    # volumes:
+    # - ./nginx.conf:/etc/nginx/nginx.conf
+    # - ./certbot/www/:/var/www/certbot/:ro
     depends_on:
       - server
       - certbot
