--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,8 +13,18 @@ services:
       - .env.server
     environment:
       - NODE_ENV=prod
-    depends_on:
-      - redis
+    networks:
+      - mern-app
+
+  client:
+    image: doankietdev/digital-world-shop-web:1.0.0
+    env_file: .env.client
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx:/etc/nginx/conf.d
     networks:
       - mern-app
 
@@ -23,27 +33,9 @@ services:
     container_name: certbot
     volumes:
       - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email doankietdev@gmail.com -d digitals.software --agree-tos
-    depends_on:
-      - server
-      - client
-
-  client:
-    image: doankietdev/digital-world-shop-web:1.0.0
-    env_file: .env.client
-    ports:
-      - '80:80'
-      - '443:443'
-    # volumes:
-    # - ./nginx.conf:/etc/nginx/nginx.conf
-    # - ./certbot/www/:/var/www/certbot/:ro
-    depends_on:
-      - server
-      - certbot
-    networks:
-      - mern-app
-
+      - ./certbot/logs:/var/log/letsencrypt
+      - ./nginx:/etc/nginx/conf.d
+    command: certonly --webroot -w /usr/share/nginx/html -d digitals.software
 networks:
   mern-app:
     driver: bridge
