--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,8 +31,9 @@ http {
         listen 443 ssl http2;
         server_name digitals.software www.digitals.software;
 
-        ssl_certificate /etc/nginx/ssl/live/digitals.software/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/live/digitals.software/privkey.pem;
+         # SSL certificates
+        ssl_certificate /etc/letsencrypt/live/digitals.software/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/digitals.software/privkey.pem;
 
         location / {
             root /usr/share/nginx/html;
