--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,34 +16,6 @@ services:
     networks:
       - mern-app
 
-  tmp-proxy:
-    image: nginx:latest
-    ports:
-      - '80:80'
-    volumes:
-      - ./nginx.tmp.conf:/etc/nginx/nginx.conf
-
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email doankietdev@gmail.com -d digitals.software --agree-tos
-    depends_on:
-      - tmp-proxy
-
-  cleanup:
-    image: busybox
-    container_name: cleanup
-    command: >
-      /bin/sh -c "sleep 60 && docker-compose rm -f tmp-proxy"
-    depends_on:
-      - certbot
-    networks:
-      - mern-app
-    restart: 'no'
-
   client:
     image: doankietdev/digital-world-shop-web:1.0.0
     env_file: .env.client
@@ -57,7 +29,8 @@ services:
     networks:
       - mern-app
     depends_on:
-      - cleanup
+      - redis
+      - server
 networks:
   mern-app:
     driver: bridge
