--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
 
     server {
         listen 80;
-        server_name digitals.software www.digitals.software;
+        server_name ${DOMAIN} www.${DOMAIN};
 
         location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -27,16 +27,14 @@ http {
         location / {
             return 301 https://$host$request_uri;
         }
-
     }
 
     server {
         listen 443 ssl http2;
-        server_name digitals.software www.digitals.software;
+        server_name ${DOMAIN} www.${DOMAIN};
 
-         # SSL certificates
-        ssl_certificate /etc/letsencrypt/live/digitals.software/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/digitals.software/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
 
         location / {
             root /usr/share/nginx/html;
@@ -45,7 +43,7 @@ http {
             expires max;
             gzip_static on;
             gzip on;
-            gzip_types text/plain text/csss application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+            gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
             add_header X-Content-Type-Options nosniff;
             add_header X-Frame-Options DENY;
             add_header X-XSS-Protection "1; mode=block";        
