--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
 
     server {
         listen 80;
-        server_name ${DOMAIN} www.${DOMAIN};
+        server_name digitals.software www.digitals.software;
 
         location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -31,10 +31,10 @@ http {
 
     server {
         listen 443 ssl http2;
-        server_name ${DOMAIN} www.${DOMAIN};
+        server_name digitals.software www.digitals.software;
 
-        ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/digitals.software/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/digitals.software/privkey.pem;
 
         location / {
             root /usr/share/nginx/html;
