--- a/nginx.tmp.conf
+++ b/nginx.tmp.conf
@@ -5,7 +5,7 @@ http {
 
     server {
         listen 80;
-        server_name ${DOMAIN} www.${DOMAIN};
+        server_name digitals.software www.digitals.software;
 
         location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;
